--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^5.0.0-alpha.44",
+    "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
