--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.16.2",
     "react-input-mask": "^2.0.4",
+    "react-number-format": "^4.7.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-use": "^17.3.1",
